--- a/admin-test.html
+++ b/admin-test.html
@@ -63,10 +63,10 @@
         // CONFIGURAR SUPABASE
         // =============================
 
-        const supabase = window.supabase.createClient(
-            "https://TU_URL.supabase.co",
-            "TU_KEY"
-        );
+   const supabaseClient = supabase.createClient(
+    "https://jwcgiuhdugjunndfpdjr.supabase.co",
+    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp3Y2dpdWhkdWdqdW5uZGZwZGpyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NTA2NTQsImV4cCI6MjA3ODUyNjY1NH0.llknOTpK1hFMDOjdyDUKUFuiyr0NwwJzNv6YdJbBsRY"
+);
 
         const contenedor = document.getElementById("solicitudes-container");
 
