--- a/admin-test.html
+++ b/admin-test.html
@@ -1,163 +1,137 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Panel de Entregas</title>
+<div style="display:flex; gap:20px; padding:20px;">
 
-    <style>
-        body {
-            font-family: Arial;
-            padding: 20px;
-            background: #f3f3f3;
-        }
-        .solicitud-card {
-            background: white;
-            padding: 15px;
-            border-radius: 8px;
-            margin-bottom: 15px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        textarea {
-            width: 100%;
-            height: 70px;
-            margin-top: 10px;
-            border-radius: 6px;
-            padding: 8px;
-        }
-        button {
-            margin-top: 10px;
-            margin-right: 10px;
-            padding: 8px 14px;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-        .guardar-btn {
-            background: #4caf50;
-            color: white;
-        }
-        .borrar-btn {
-            background: #e53935;
-            color: white;
-        }
-    </style>
+    <!-- COLUMNA IZQUIERDA — PENDIENTES -->
+    <div style="flex:1; border:1px solid #ddd; padding:15px; border-radius:10px;">
+        <h2>Solicitudes Pendientes</h2>
+        <div id="colPendientes">Cargando...</div>
+    </div>
 
-    <!-- Librería correcta Supabase v2 -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-</head>
+    <!-- COLUMNA DERECHA — ENTREGADAS -->
+    <div style="flex:1; border:1px solid #ddd; padding:15px; border-radius:10px;">
+        <h2>Solicitudes Entregadas</h2>
+        <div id="colEntregadas">Cargando...</div>
+    </div>
 
-<body>
+</div>
 
-    <h2>Solicitudes Entregadas Pendientes de Comentario</h2>
 
-    <div id="solicitudes-container">Cargando...</div>
+<script>
+/* -------------------------
+   CARGAR SOLICITUDES PENDIENTES
+---------------------------- */
+async function getSolicitudesPendientes() {
+    const { data, error } = await supabase
+        .from("solicitudes")
+        .select(`
+            id,
+            email,
+            docente,
+            asignatura,
+            fecha_solicitud,
+            estado,
+            materiales_solicitados (
+                material,
+                cantidad
+            )
+        `)
+        .eq("estado", "Pendiente")
+        .order("fecha_solicitud", { ascending: true });
 
-    <script>
-        // =============================
-        // INICIALIZAR SUPABASE CORRECTAMENTE
-        // =============================
-        const { createClient } = supabase;
+    if (error) {
+        console.error("Error solicitudes pendientes:", error);
+        return [];
+    }
+    return data;
+}
 
-        const client = createClient(
-            "https://jwcgiuhdugjunndfpdjr.supabase.co",
-            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp3Y2dpdWhkdWdqdW5uZGZwZGpyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NTA2NTQsImV4cCI6MjA3ODUyNjY1NH0.llknOTpK1hFMDOjdyDUKUFuiyr0NwwJzNv6YdJbBsRY"
-        );
 
-        const contenedor = document.getElementById("solicitudes-container");
 
-        // =============================
-        // CARGAR SOLICITUDES
-        // =============================
-        async function cargarSolicitudes() {
+/* -------------------------
+   CARGAR SOLICITUDES ENTREGADAS
+   (estado = Entregado AND comentario_entrega NULL o "")
+---------------------------- */
+async function getSolicitudesEntregadas() {
+    const { data, error } = await supabase
+        .from("solicitudes")
+        .select(`
+            id,
+            email,
+            docente,
+            asignatura,
+            fecha_solicitud,
+            fecha_entrega,
+            estado
+        `)
+        .eq("estado", "Entregado")
+        .or('comentario_entrega.is.null,comentario_entrega.eq.""')
+        .order("fecha_entrega", { ascending: false });
 
-            contenedor.innerHTML = "Cargando...";
+    if (error) {
+        console.error("Error solicitudes entregadas:", error);
+        return [];
+    }
+    return data;
+}
 
-            // Traer solicitudes entregadas sin comentario
-            const { data, error } = await client
-                .from("solicitudes")
-                .select("*")
-                .eq("estado", "Entregado")
-                .or("comentario_entrega.is.null,comentario_entrega.eq.")
-                .order("id", { ascending: false });
 
-            if (error) {
-                contenedor.innerHTML = "Error al cargar solicitudes.";
-                console.error(error);
-                return;
-            }
 
-            const pendientes = data.filter(s =>
-                !s.comentario_entrega || s.comentario_entrega.trim() === ""
-            );
+/* -------------------------
+   RENDERIZAR TODO EN LA PÁGINA
+---------------------------- */
+async function cargarPanelSolicitudes() {
+    const colPend = document.getElementById("colPendientes");
+    const colEnt  = document.getElementById("colEntregadas");
 
-            if (pendientes.length === 0) {
-                contenedor.innerHTML = "<p>No hay solicitudes pendientes.</p>";
-                return;
-            }
+    colPend.innerHTML = "Cargando...";
+    colEnt.innerHTML = "Cargando...";
 
-            contenedor.innerHTML = "";
+    const pendientes = await getSolicitudesPendientes();
+    const entregadas = await getSolicitudesEntregadas();
 
-            pendientes.forEach(s => {
-                const card = document.createElement("div");
-                card.classList.add("solicitud-card");
+    colPend.innerHTML = "";
+    colEnt.innerHTML = "";
 
-                card.innerHTML = `
-                    <p><strong>ID:</strong> ${s.id}</p>
-                    <p><strong>Usuario:</strong> ${s.usuario}</p>
-                    <p><strong>Asignatura:</strong> ${s.asignatura ?? "(No definida)"}</p>
-                    <p><strong>Materiales:</strong> ${s.materiales}</p>
+    /* ---- MOSTRAR PENDIENTES ---- */
+    pendientes.forEach(s => {
+        let matHTML = "";
 
-                    <textarea placeholder="Comentario de entrega"></textarea>
-
-                    <button class="guardar-btn" data-id="${s.id}">Guardar</button>
-                    <button class="borrar-btn" data-id="${s.id}">Borrar</button>
-                `;
-
-                contenedor.appendChild(card);
-            });
+        if (s.materiales_solicitados?.length > 0) {
+            matHTML = s.materiales_solicitados
+                .map(m => `<li>${m.material} — ${m.cantidad}</li>`)
+                .join("");
         }
 
-        cargarSolicitudes();
+        colPend.innerHTML += `
+            <div style="border:1px solid #ccc; padding:10px; margin-bottom:12px; border-radius:8px;">
+                <strong>ID: ${s.id}</strong><br>
+                <b>Docente:</b> ${s.docente}<br>
+                <b>Asignatura:</b> ${s.asignatura}<br>
+                <b>Fecha solicitud:</b> ${s.fecha_solicitud}<br><br>
+                <b>Materiales:</b>
+                <ul>${matHTML}</ul>
+            </div>
+        `;
+    });
 
-        // =============================
-        // EVENTOS: GUARDAR / BORRAR
-        // =============================
-        document.addEventListener("click", async (e) => {
+    /* ---- MOSTRAR ENTREGADAS ---- */
+    entregadas.forEach(s => {
+        colEnt.innerHTML += `
+            <div style="border:1px solid #ccc; padding:10px; margin-bottom:12px; border-radius:8px;">
+                <strong>ID: ${s.id}</strong><br>
+                <b>Docente:</b> ${s.docente}<br>
+                <b>Asignatura:</b> ${s.asignatura}<br>
+                <b>Fecha solicitud:</b> ${s.fecha_solicitud}<br>
+                <b>Fecha entrega:</b> ${s.fecha_entrega}<br>
+            </div>
+        `;
+    });
+}
 
-            // GUARDAR
-            if (e.target.classList.contains("guardar-btn")) {
-                const id = e.target.dataset.id;
-                const comentario = e.target.previousElementSibling.value.trim();
 
-                await client
-                    .from("solicitudes")
-                    .update({
-                        comentario_entrega: comentario !== "" ? comentario : "Sin comentarios"
-                    })
-                    .eq("id", id);
-
-                cargarSolicitudes();
-            }
-
-            // BORRAR (Sin comentarios)
-            if (e.target.classList.contains("borrar-btn")) {
-                const id = e.target.dataset.id;
-
-                await client
-                    .from("solicitudes")
-                    .update({
-                        comentario_entrega: "Sin comentarios"
-                    })
-                    .eq("id", id);
-
-                cargarSolicitudes();
-            }
-        });
-    </script>
-
-</body>
-</html>
+/* -------------------------
+   EJECUTAR AL CARGAR PÁGINA
+---------------------------- */
+document.addEventListener("DOMContentLoaded", cargarPanelSolicitudes);
+</script>
 
 
