--- a/admin-test.html
+++ b/admin-test.html
@@ -13,8 +13,6 @@ const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBh
 const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 </script>
 
-
-
 <!-- ==========================
      ESTRUCTURA DE 2 COLUMNAS
 =========================== -->
@@ -33,8 +31,6 @@ const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
     </div>
 
 </div>
-
-
 
 <script>
 /* -------------------------
@@ -65,8 +61,6 @@ async function getSolicitudesPendientes() {
     return data;
 }
 
-
-
 /* -------------------------
    CARGAR SOLICITUDES ENTREGADAS
    condición: Entregado + comentario_entrega NULL o ""
@@ -93,8 +87,6 @@ async function getSolicitudesEntregadas() {
     }
     return data;
 }
-
-
 
 /* -------------------------
    RENDERIZAR COLUMNAS
@@ -135,7 +127,7 @@ async function cargarPanelSolicitudes() {
         `;
     });
 
-    /* ---- MOSTRAR ENTREGADAS ---- */
+    /* ---- MOSTRAR ENTREGADAS CON CUADRO DE TEXTO Y 2 BOTONES ---- */
     entregadas.forEach(s => {
         colEnt.innerHTML += `
             <div style="border:1px solid #ccc; padding:10px; margin-bottom:12px; border-radius:8px;">
@@ -143,13 +135,20 @@ async function cargarPanelSolicitudes() {
                 <b>Docente:</b> ${s.docente}<br>
                 <b>Asignatura:</b> ${s.asignatura}<br>
                 <b>Fecha solicitud:</b> ${s.fecha_solicitud}<br>
-                <b>Fecha entrega:</b> ${s.fecha_entrega}<br>
+                <b>Fecha entrega:</b> ${s.fecha_entrega}<br><br>
+
+                <!-- CUADRO DE TEXTO PARA COMENTARIO -->
+                <textarea id="comentario-${s.id}" placeholder="Escribe un comentario..." style="width:100%; padding:5px; margin-bottom:5px;"></textarea>
+                
+                <!-- BOTONES -->
+                <div style="display:flex; gap:5px;">
+                    <button id="btnEnviarComentario-${s.id}" style="padding:5px 10px;">Enviar comentario</button>
+                    <button id="btnSinComentario-${s.id}" style="padding:5px 10px;">Sin comentarios</button>
+                </div>
             </div>
         `;
     });
 }
-
-
 
 /* -------------------------
    EJECUTAR AL CARGAR PÁGINA
